Fix dark mode issues.

--- a/server/weather_station/static/css/style.css
+++ b/server/weather_station/static/css/style.css
@@ -33,6 +33,8 @@
 
     /* Shadow */
     --box-shadow: 0 2rem 3rem var(--color-light);
+
+    --text-area-color: rgba(255, 255, 255, 0.8);
 }
 
 .dark-theme-variables {
@@ -45,6 +47,8 @@
     --box-shadow: 0 2rem 3rem var(--color-light);
 
     --color-item: linear-gradient(to right bottom, #293c4d, #1f2f3e);
+
+    --text-area-color: rgb(36 49 63);
 }
 
 * {
@@ -314,6 +318,7 @@ b {
 .icon {
     width: 23px;
     height: 23px;
+    fill: var(--color-dark);
 }
 
 .icon-min {
@@ -380,6 +385,7 @@ b {
 .item {
     width: 100%;
     padding: var(--card-padding);
+    margin-top: 1rem;
     border-radius: var(--border-radius-3);
 }   
 
@@ -517,7 +523,7 @@ main .insights {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.6rem;
-    margin: 1rem 0 2rem 0;
+    /* margin: 1rem 0 2rem 0; */
 }
 
 main .insights > a {
@@ -998,12 +1004,8 @@ main .main-table table {
     font-weight: 700;
     font-size: 0.95rem;
     border: 2px solid rgba(255, 255, 255, 0.85);
-    background: rgba(255, 255, 255, 0.8);
+    background: var(--text-area-color);
     transition: all 0.3s;
-}
-
-.contact-form .contact-input:hover {
-    background: rgba(255, 255, 255, 0.95);
 }
 
 .contact-form .input-wrap label {
@@ -1011,7 +1013,7 @@ main .main-table table {
     top: 50%;
     left: calc(1.35rem + 2px);
     transform: translateY(-50%);
-    color: #000;
+    color: var(--color-dark);
     font-weight: 700;
     pointer-events: none;
     transition: all 0.25s;
@@ -1030,7 +1032,7 @@ main .main-table table {
 .contact-form textarea.contact-input {
     resize: none;
     width: 100%;
-    height: 150px;
+    height: 200px;
 }
 
 .contact-form textarea.contact-input ~ label {
@@ -1041,13 +1043,6 @@ main .main-table table {
 .contact-form textarea.contact-input ~ .icon {
     top: 1.3rem;
     transform: none;
-}
-
-.contact-form .input-wrap.focus .contact-input {
-    background-color: #f0f3f8bf;
-    border: 2px solid var(--color-primary);
-    box-shadow: var(--box-shadow);
-    backdrop-filter: blur(2rem);
 }
 
 .contact-form .input-wrap.focus label {
